RESOLVED FIXED273980
Function enableTextIndicatorStyleAfterElementWithID does not respect passed in elementID.
https://bugs.webkit.org/show_bug.cgi?id=273980
Summary Function enableTextIndicatorStyleAfterElementWithID does not respect passed i...
Megan Gardner
Reported 2024-05-09 16:51:42 PDT
Function enableTextIndicatorStyleAfterElementWithID does not respect passed in elementID.
Attachments
Megan Gardner
Comment 1 2024-05-09 16:52:10 PDT
Megan Gardner
Comment 2 2024-05-09 16:55:08 PDT
EWS
Comment 3 2024-05-09 23:28:00 PDT
Committed 278603@main (3379399f9995): <https://commits.webkit.org/278603@main> Reviewed commits have been landed. Closing PR #28372 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.