Function enableTextIndicatorStyleAfterElementWithID does not respect passed in elementID. https://bugs.webkit.org/show_bug.cgi?id=273980 rdar://127847591

Reviewed by Aditya Keerthi.

Finish implementation of enableTextIndicatorStyleAfterElementWithID
by actually using the element to determine the range for the
textIndicator.

* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::enableTextIndicatorStyleAfterElementWithID):

Canonical link: https://commits.webkit.org/278603@main